feat(api): add enpoint for remove private images
